--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/custom-cit.css" rel="stylesheet">
+    <link href="css/custom-styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="navbar navbar-default ">
+    <div class="navbar navbar-default navbar-second">
         <div class="container">
             <div class="navbar-collapse ">
                 <a href="#" class="navbar-brand nav navbar-nav navbar-left" style="display:block!important">
