--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
+
+
     <div class="navbar navbar-inverse navbar-static-top">
+        <div class="alert-error affix-top citizens-alert">
+            <div class="container">
+                Due to Torpical Storm Gena, Citizens has suspended writing any new policies until further notice.
+                <button type="button" class="close" data-dismiss="alert">×</button>
+            </div>
+        </div>
         <div class="container">
             <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
                 <span class="icon-bar"></span>
@@ -121,22 +129,22 @@
     </div>
 
 
-    
+
     <div class="container gallery">
         <div class="row">
             <div class="col-md-4 stretch">
                 <img class="img-responsive stretch gallery" src="images/careers.jpg" alt="Careers">
-                <div class="gallery-title"> Careers At Citizens</div>
+                <div class="gallery-title">Careers At Citizens</div>
                 <div class="gallery-text">Work at the best company in the world</div>
             </div>
             <div class="col-md-4 stretch">
                 <img class="img-responsive stretch gallery" src="images/Policy.jpg" alt="Policy">
-                <div class="gallery-title"> Manage myPolicy</div>
+                <div class="gallery-title">Manage myPolicy</div>
                 <div class="gallery-text">Learn everything there is about the insurance industry.</div>
             </div>
             <div class="col-md-4 stretch">
                 <img class="img-responsive stretch gallery" src="images/lightning.jpg" alt="Lightning">
-                <div class="gallery-title"> Storm Prep</div>
+                <div class="gallery-title">Storm Prep</div>
                 <div class="gallery-text">Tips and tricks to prepare you for the perfect storm.</div>
             </div>
         </div>
