--- a/index.html
+++ b/index.html
@@ -91,27 +91,34 @@
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
                     <img class="img-responsive" src="images/slide1.png" alt="Learning...">
-                    <!--<div class="carousel-caption">
-                        <h3>We are Citizens</h3>
+                    <div class="carousel-title">
+                        <p>We are Citizens</p>
+                    </div>
+                    <div class="carousel-text">
                         <p>Brenda P</p>
                         <p>Learning Developement</p>
-                    </div>-->
+
+                    </div>
                 </div>
                 <div class="item">
                     <img class="img-responsive" src="images/slide2.png" alt="Operations...">
-                    <!--<div class="carousel-caption">
-                        <h3>We are Citizens</h3>
+                    <div class="carousel-title">
+                        <p>We are Citizens</p>
+                    </div>
+                    <div class="carousel-text">
                         <p>Stacey B</p>
                         <p>IT Operations</p>
-                    </div>-->
+                    </div>
                 </div>
                 <div class="item">
                     <img class="img-responsive" src="images/slide3.png" alt="Finance...">
-                    <!--<div class="carousel-caption">
-                        <h3>We are Citizens</h3>
+                    <div class="carousel-title">
+                        <p>We are Citizens</p>
+                    </div>
+                    <div class="carousel-text">
                         <p>Patrick K</p>
                         <p>Finance</p>
-                    </div>-->
+                    </div>
                 </div>
             </div>
 
@@ -149,8 +156,8 @@
             </div>
         </div>
     </div>
-    
-    
+
+
 
     <div class="navbar navbar-inverse navbar-bottom">
         <div class="containter">
