carousel fonts in em

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="item active">
                     <img class="img-responsive" src="images/slide1.png" alt="Learning...">
                     <div class="carousel-title">
-                        <p>We are Citizens</p>
+                        <p>We Are Citizens</p>
                     </div>
                     <div class="carousel-text">
                         <p>Brenda P</p>
@@ -103,7 +103,7 @@
                 <div class="item">
                     <img class="img-responsive" src="images/slide2.png" alt="Operations...">
                     <div class="carousel-title">
-                        <p>We are Citizens</p>
+                        <p>We Are Citizens</p>
                     </div>
                     <div class="carousel-text">
                         <p>Stacey B</p>
@@ -113,7 +113,7 @@
                 <div class="item">
                     <img class="img-responsive" src="images/slide3.png" alt="Finance...">
                     <div class="carousel-title">
-                        <p>We are Citizens</p>
+                        <p>We Are Citizens</p>
                     </div>
                     <div class="carousel-text">
                         <p>Patrick K</p>
