--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Citizens Home Page</title>
     <meta name="viewport" content="width=device-width initial-scale=1.0">
 
-    <link href="css/bootstrap.css" rel="stylesheet">
+<!--    <link href="css/bootstrap.css" rel="stylesheet">-->
+    <link href="css/citizens-bootstrap.css" rel="stylesheet">
     <link href="css/custom-styles.css" rel="stylesheet">
     
     <style type="text/css">
