--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img class="img-responsive" src="images/slide1.png" alt="Learning...">
+                    <img class="img-responsive" src="images/Banner%20Brenda.jpg" alt="Learning...">
                     <!--<div class="carousel-title">
                         <p>We Are Citizens</p>
                     </div>
@@ -122,7 +122,7 @@
                     </div>-->
                 </div>
                 <div class="item">
-                    <img class="img-responsive" src="images/slide2.png" alt="Operations...">
+                    <img class="img-responsive" src="images/Banner%20Stacey.jpg" alt="Operations...">
                     <!--<div class="carousel-title">
                         <p>We Are Citizens</p>
                     </div>
@@ -132,7 +132,7 @@
                     </div>-->
                 </div>
                 <div class="item">
-                    <img class="img-responsive" src="images/slide3.png" alt="Finance...">
+                    <img class="img-responsive" src="images/Banner%20Patrick.jpg" alt="Finance...">
                     <!--<div class="carousel-title">
                         <p>We Are Citizens</p>
                     </div>
