carousel and gallery width

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div class="container">
 
-        <div id="carousel-generic" class="carousel slide" data-ride="carousel">
+        <div id="carousel-generic" class="row carousel slide" data-ride="carousel">
             <!-- Indicators -->
 <!--
             <ol class="carousel-indicators">
@@ -158,9 +158,9 @@
 
 
 
-    <div class="container gallery">
-        <div class="row">
-            <div class="col-md-4 stretch">
+    <div class="container">
+        <div class="row gallery ">
+            <div class="col-md-4 stretch ">
                 <img class="img-responsive stretch gallery" src="images/careers.jpg" alt="Careers">
                 <div class="gallery-title">Careers At Citizens</div>
                 <div class="gallery-text">Work at the best company in the world</div>
