gallery splits vertically only in small devices

--- a/index.html
+++ b/index.html
@@ -160,17 +160,17 @@
 
     <div class="container">
         <div class="row gallery ">
-            <div class="col-md-4 stretch ">
+            <div class="col-sm-4 stretch ">
                 <img class="img-responsive stretch gallery" src="images/careers.jpg" alt="Careers">
                 <div class="gallery-title">Careers At Citizens</div>
                 <div class="gallery-text">Work at the best company in the world</div>
             </div>
-            <div class="col-md-4 stretch">
+            <div class="col-sm-4 stretch">
                 <img class="img-responsive stretch gallery" src="images/Policy.jpg" alt="Policy">
                 <div class="gallery-title">Manage myPolicy</div>
                 <div class="gallery-text">Learn everything there is about the insurance industry.</div>
             </div>
-            <div class="col-md-4 stretch">
+            <div class="col-sm-4 stretch">
                 <img class="img-responsive stretch gallery" src="images/lightning.jpg" alt="Lightning">
                 <div class="gallery-title">Storm Prep</div>
                 <div class="gallery-text">Tips and tricks to prepare you for the perfect storm.</div>
