--- a/governance.html
+++ b/governance.html
@@ -51,9 +51,9 @@
                     </li>
                     <li> <a href="/">Contact Us</a>
                     </li>
-                    <li> <a href="/governance.html">Governance</a>
+                    <li> <a href="#">Governance</a>
                     </li>
-                    <li> <a href="#">Search</a>
+                    <li> <a href="/">Search</a>
                     </li>
                     <li class="dropdown" id="menuLogin">
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
@@ -76,12 +76,12 @@
         <div class="container">
             <div class="navbar-collapse ">
                 <a href="#" class="navbar-brand nav navbar-nav navbar-left" style="display:block!important">
-                    <img class="img-responsive" src="images/Citizen-Logo.png">
+                    <img class="img-responsive" src="images/Go%20Button.png">
                 </a>
                 <ul class="nav navbar-nav navbar-right" style="display:block!important">
                     <li> <a href="#">Insurance</a>
                     </li>
-                    <li> <a href="#">Claims</a>
+                    <li> <a href="blog.html">Claims</a>
                     </li>
                     <li> <a href="#">Storms</a>
                     </li>
@@ -96,86 +96,19 @@
         </div>
     </div>
 
-    <div class="container">
 
-        <div id="carousel-generic" class="row carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-<!--
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-generic" data-slide-to="2"></li>
-            </ol>
--->
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img class="img-responsive" src="images/Banner%20Brenda.jpg" alt="Learning...">
-                    <!--<div class="carousel-title">
-                        <p>We Are Citizens</p>
-                    </div>
-                    <div class="carousel-text">
-                        <p>Brenda P</p>
-                        <p>Learning Developement</p>
-
-                    </div>-->
-                </div>
-                <div class="item">
-                    <img class="img-responsive" src="images/Banner%20Stacey.jpg" alt="Operations...">
-                    <!--<div class="carousel-title">
-                        <p>We Are Citizens</p>
-                    </div>
-                    <div class="carousel-text">
-                        <p>Stacey B</p>
-                        <p>IT Operations</p>
-                    </div>-->
-                </div>
-                <div class="item">
-                    <img class="img-responsive" src="images/Banner%20Patrick.jpg" alt="Finance...">
-                    <!--<div class="carousel-title">
-                        <p>We Are Citizens</p>
-                    </div>
-                    <div class="carousel-text">
-                        <p>Patrick K</p>
-                        <p>Finance</p>
-                    </div>-->
-                </div>
-            </div>
-
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-
-    </div>
-
-
-
-    <div class="container">
-        <div class="row gallery ">
-            <div class="col-sm-4 stretch ">
-                <img class="img-responsive stretch gallery" src="images/careers.jpg" alt="Careers">
-                <div class="gallery-title">Careers At Citizens</div>
-                <div class="gallery-text">Work at the best company in the world</div>
-            </div>
-            <div class="col-sm-4 stretch">
-                <img class="img-responsive stretch gallery" src="images/Policy.jpg" alt="Policy">
-                <div class="gallery-title">Manage myPolicy</div>
-                <div class="gallery-text">Learn everything there is about the insurance industry.</div>
-            </div>
-            <div class="col-sm-4 stretch">
-                <img class="img-responsive stretch gallery" src="images/lightning.jpg" alt="Lightning">
-                <div class="gallery-title">Storm Prep</div>
-                <div class="gallery-text">Tips and tricks to prepare you for the perfect storm.</div>
-            </div>
-        </div>
+    <div class="container row">
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie volutpat augue eu dignissim. Aenean interdum tellus arcu, lacinia fringilla lectus hendrerit at. Praesent ullamcorper purus nec orci interdum egestas. Nam et orci mi. Proin congue urna velit, eget blandit erat aliquam eget. Etiam luctus nisl a bibendum pretium. Aenean ut augue tempus, feugiat justo nec, convallis metus.
+</p><p>
+Sed at ante sapien. Morbi non libero imperdiet, pharetra dui dictum, congue massa. Duis ullamcorper lacus id ipsum porta posuere. Sed sodales mollis odio, sollicitudin consequat diam suscipit in. Cras suscipit ante sed urna accumsan laoreet. Suspendisse nec faucibus orci. In hac habitasse platea dictumst.
+</p><p>
+Aliquam mattis arcu ex, vitae mattis velit bibendum quis. Donec eget ipsum augue. In in metus vestibulum diam aliquet pretium a at sapien. Nullam porttitor vestibulum velit vel aliquam. Aliquam iaculis quis orci ac efficitur. Integer varius nisl magna, at gravida quam pharetra in. Maecenas eleifend sem ac gravida maximus. Maecenas rhoncus tellus accumsan porttitor mattis. Aliquam posuere pretium purus, at euismod mauris feugiat sed. Phasellus accumsan ut tellus cursus gravida.
+</p><p>
+Aliquam in porta justo, in placerat nunc. Duis consectetur pulvinar magna quis congue. Proin ipsum augue, iaculis nec felis ut, pulvinar lobortis libero. Nulla ut enim eu odio commodo mollis. Donec ullamcorper eleifend velit in viverra. Donec laoreet elementum sem vitae bibendum. Curabitur vulputate varius libero non iaculis. Vestibulum lobortis dui sit amet nibh porttitor porttitor. Donec vel sodales dui. Pellentesque id rhoncus dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam feugiat eros augue, ac sagittis augue congue sed. Maecenas ut massa vehicula, ornare velit eget, tempus turpis. Vestibulum eget eleifend purus, suscipit imperdiet mi.
+</p><p>
+Integer id erat fermentum sem sodales cursus. Sed vestibulum non diam a facilisis. Praesent dignissim, mi vitae laoreet pretium, erat urna ultrices neque, vel volutpat turpis metus eget diam. Ut a porta lorem, ac porta ipsum. Vestibulum mollis, leo et iaculis faucibus, mauris metus congue est, at rutrum mauris elit ac metus. Cras convallis turpis in dolor mollis eleifend. Nulla a dictum nibh. Quisque tincidunt pharetra elit, a accumsan nibh faucibus sed. Nullam massa tortor, dignissim at magna ut, laoreet tristique sem. Pellentesque mauris est, posuere ut odio auctor, placerat commodo nibh. Donec sit amet egestas dolor. Sed rutrum sapien non risus consectetur, pellentesque accumsan velit rutrum. Aenean vitae tincidunt orci, ut convallis leo. Donec laoreet congue urna in dapibus.
+        </p>
     </div>
 
 
