--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
                     </li>
                     <li> <a href="/governance.html">Governance</a>
                     </li>
-                    <li> <a href="#">Search</a>
+                    <li> 
+                        <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navSearch">Search</a>
+                        <div class="dropdown-menu navbar-inverse" style="padding:17px;">
+                            <form class="form" id="formSearch">
+                                <input name="keywords" id="keywords" type="text" placeholder="Search">
+                                <br>
+                                <button type="btn-info" id="btnSearch" class="btn">Search</button>
+                            </form>
+                        </div>
                     </li>
                     <li class="dropdown" id="menuLogin">
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
