--- a/governance.html
+++ b/governance.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="navbar-collapse ">
                 <a href="#" class="navbar-brand nav navbar-nav navbar-left" style="display:block!important">
-                    <img class="img-responsive" src="images/Go%20Button.png">
+                    <img class="img-responsive" src="images/Citizen-Logo.png">
                 </a>
                 <ul class="nav navbar-nav navbar-right" style="display:block!important">
                     <li> <a href="#">Insurance</a>
