--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </li>
                     <li> <a href="/governance.html">Governance</a>
                     </li>
-                    <li> 
+                    <li>
                         <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navSearch">Search</a>
                         <div class="dropdown-menu navbar-inverse" style="padding:17px;">
                             <form class="form" id="formSearch">
@@ -108,13 +108,11 @@
 
         <div id="carousel-generic" class="row carousel slide" data-ride="carousel">
             <!-- Indicators -->
-<!--
             <ol class="carousel-indicators">
                 <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-generic" data-slide-to="2"></li>
             </ol>
--->
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
@@ -169,17 +167,17 @@
     <div class="container">
         <div class="row gallery ">
             <div class="col-sm-4 stretch ">
-                <img class="img-responsive stretch gallery" src="images/careers.jpg" alt="Careers">
+                <img class="img-responsive stretch gallery" src="images/Careers%20Color.jpg" alt="Careers">
                 <div class="gallery-title">Careers At Citizens</div>
                 <div class="gallery-text">Work at the best company in the world</div>
             </div>
             <div class="col-sm-4 stretch">
-                <img class="img-responsive stretch gallery" src="images/Policy.jpg" alt="Policy">
+                <img class="img-responsive stretch gallery" src="images/Policy%20Color.jpg" alt="Policy">
                 <div class="gallery-title">Manage myPolicy</div>
                 <div class="gallery-text">Learn everything there is about the insurance industry.</div>
             </div>
             <div class="col-sm-4 stretch">
-                <img class="img-responsive stretch gallery" src="images/lightning.jpg" alt="Lightning">
+                <img class="img-responsive stretch gallery" src="images/Lightning%20Color.jpg" alt="Lightning">
                 <div class="gallery-title">Storm Prep</div>
                 <div class="gallery-text">Tips and tricks to prepare you for the perfect storm.</div>
             </div>
